MDCMigration: Fix prev and next buttons for dark mode

--- a/tensorboard/webapp/metrics/views/main_view/card_grid_component.scss
+++ b/tensorboard/webapp/metrics/views/main_view/card_grid_component.scss
@@ -92,10 +92,8 @@ card-view {
 }
 
 .pagination-button {
-  @include tb-theme-foreground-prop(color, secondary-text);
   background-color: $metrics-button-background-color-on-gray;
-
-  &:disabled {
-    @include tb-theme-foreground-prop(color, disabled-text);
+  @include tb-dark-theme {
+    background-color: transparent;
   }
 }
